# API-project-service-stations

./: .gitignore  CMakeLists.txt  README.md  eseguibile  main.c  outputfile  testo.cpp
Tests/: add_car  add_station  expected_output.txt  input.txt  output.txt  plan_route  plan_route_backward  remove_car  remove_station
Utils/: 0_create_exec.sh  1_memcheck.sh  2_callgrind.sh  3_massif.sh  4_address_sanitizer.sh  5_generate_output.sh  5_test_open.sh  6_test_open.sh  7_all_tests.sh
